sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:24: error: not found: value needSWap
						needSWap=true;
                                                ^